# personal-private-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
infra/: NOTES.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
src/memory_bot/: agent.py  config.py  handler.py  models.py  store.py  telegram.py  transcribe.py
tests/: conftest.py  test_agent.py  test_config.py  test_handler.py  test_models.py  test_store.py  test_telegram.py  test_transcribe.py
