[project]
name = "memory-bot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pydantic-ai-slim[anthropic,google,openai]>=2,<3", "boto3>=1.34"]

[project.optional-dependencies]
dev = ["pytest>=8", "moto[dynamodb]>=5", "ruff>=0.6"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
